# SargosPizza

./: Cargo.toml  config.toml  flake.nix
assets/environment_maps/: outer-space-background_53876-88651.avif
assets/shaders/: cloud.wgsl  cloud_blob.wgsl  fin_cloud.wgsl  flat.wgsl  fog.wgsl  planet.wgsl  rm_cloud.wgsl  skybox.wgsl  sun.wgsl  water.wgsl
src/: fog.rs  gravity.rs  main.rs  orbit_cam.rs  planet.rs  sky.rs  sun.rs
