[package]
name = "sargos_pizza"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { path = "../bevy", features = ["wayland",  "hdr",  "png",   "jpeg",  "bmp", "ktx2" ]}
rand = "0.8.0"


